--- a/client/src/components/Notes.css
+++ b/client/src/components/Notes.css
@@ -1,9 +1,10 @@
 /* Notes Container */
 .notes-container {
     display: flex;
+    margin-top: 60px;
     flex-wrap: wrap; 
     gap: 15px; 
-    justify-content: flex-start;}
+    justify-content: center;}
   
   /* Individual Note Card Styling */
   .note-card {
