--- a/client/src/components/Notes.css
+++ b/client/src/components/Notes.css
@@ -1,10 +1,12 @@
 /* Notes Container */
 .notes-container {
     display: flex;
-    margin-top: 60px;
+    margin-top: 50px;
     flex-wrap: wrap; 
     gap: 15px; 
-    justify-content: center;}
+    justify-content: center;
+text-align: center;
+  }
   
   /* Individual Note Card Styling */
   .note-card {
