--- a/client/src/components/nav.css
+++ b/client/src/components/nav.css
@@ -1,3 +1,7 @@
+.welcome-msg{
+  cursor: default;
+  font-size:18px;
+}
 nav {
   background-color: #4a4e69; 
   padding: 20px 0;
@@ -29,6 +33,7 @@ nav .navbar-content {
   align-items: center;
   width: 100%;
   padding: 0 20px;
+  
 }
 
 nav .navbar-logo {
@@ -56,7 +61,9 @@ nav .navbar-links button:hover {
   background-color: #9a8c98; 
   color: #ffffff;
 }
-
+.welcome-msg:hover {
+  color: #ffffff;
+}
 body {
   margin-top: 60px; 
 }
